@@ -1,0 +1,5 @@
+About datasets
+==============
+
++ All datasets were downloaded from http://www.upriss.org.uk/fca/examples.html. Special thanks to Uta Priss.
++ All files are Burmeister format.
