@@ -1,0 +1,32 @@
+B
+
+10
+7
+
+0
+1
+2
+3
+4
+5
+6
+7
+8
+9
+a
+b
+c
+d
+e
+f
+g
+X.XXXXX
+.....XX
+XXX.XX.
+XXX..XX
+.X.X.XX
+XXXX..X
+.XXXX.X
+X....XX
+XXXXXXX
+XX.X.XX
