@@ -1,0 +1,27 @@
+B
+
+8
+6
+
+Fluss
+Bach
+Kanal
+Graben
+See
+Tuempel
+Teich
+Becken
+fliessend
+stehend
+natuerlich
+kuenstlich
+gross
+klein
+X.X.X.
+X.X..X
+X..XX.
+X..X.X
+.XX.X.
+.XX..X
+.X.XX.
+.X.X.X
