@@ -1,0 +1,49 @@
+B
+
+14
+16
+
+I
+II
+III
+IV
+1
+2
+3
+4
+5
+6
+7
+8
+9
+10
+Boolean lattice
+CDS lattice
+geometric lattice
+metric lattice
+atomistic
+Brouwerian
+complemented
+distributive
+dually semimodular
+graded
+modular
+relatively complemented
+sectionally complemented
+semimodular
+Stonean
+uniquely complemented
+XXXXXXXXXXXXXXXX
+.X..X.X.XX..X...
+..X.X.X..X.XXX..
+...X....XXX..X..
+...X.X.XXXX..XX.
+.XXXX.X.XXXXXX..
+....X.X....XX...
+..X.X.X..X.XXX..
+....X...XX......
+...X.X.XXXX..X..
+....X.X..X......
+......X..X...X..
+.X..X.X.XX..X...
+.X..X.X.XX.XX...
