@@ -1,0 +1,30 @@
+B
+
+8
+9
+
+fish leech
+bream
+frog
+dog
+water weeds
+reed
+bean
+corn
+needs water to live
+lives in water
+lives on land
+needs chlorophyll
+dicotyledon
+monocotyledon
+can move
+has limbs
+breast feeds
+XX....X..
+XX....XX.
+XXX...XX.
+X.X...XXX
+XX.X.X...
+XXXX.X...
+X.XXX....
+X.XX.X...
