@@ -11,11 +11,13 @@ package fr.kbertet.lattice;
  * it under the terms of CeCILL-B license.
  */
 
-import fr.kbertet.lattice.io.ContextWriterFactory;
-import fr.kbertet.lattice.io.ContextWriterText;
+import fr.kbertet.dgraph.Node;
+import fr.kbertet.lattice.io.ContextReaderBurmeister;
 import fr.kbertet.lattice.io.ContextReaderFactory;
 import fr.kbertet.lattice.io.ContextReaderText;
-import fr.kbertet.dgraph.Node;
+import fr.kbertet.lattice.io.ContextWriterBurmeister;
+import fr.kbertet.lattice.io.ContextWriterFactory;
+import fr.kbertet.lattice.io.ContextWriterText;
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.FileReader;
@@ -87,6 +89,12 @@ public class Context extends ClosureSystem {
         }
         if (ContextReaderFactory.get("txt") == null) {
             ContextReaderText.register();
+        }
+        if (ContextWriterFactory.get("cxt") == null) {
+            ContextWriterBurmeister.register();
+        }
+        if (ContextReaderFactory.get("cxt") == null) {
+            ContextReaderBurmeister.register();
         }
     }
 
